--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
     "vue-js-modal": "^2.0.0-rc.6",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-svg-filler": "^1.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
